k8s/base/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: novapay-web
  namespace: novapay
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: novapay-web
  template:
    metadata:
      labels:
        app: novapay-web
    spec:
      securityContext:
        runAsNonRoot: true
        # Matches the 'nginx' user created in Alpine nginx container
        runAsUser: 101
      containers:
      - name: web
        image: "901970227920.dkr.ecr.us-east-1.amazonaws.com/novapay-web:v1.0.3"
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "250m"
            memory: "128Mi"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 15
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: novapay
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: novapay-web
